name:                servant-elm
version:             0.1.0.0
synopsis:            Generate Elm modules which talk to Servant APIs
description:         Please see README.md
homepage:            http://github.com/purcell/servant-elm#readme
license:             BSD3
license-file:        LICENSE
author:              Andy Newport, Steve Purcell, Kieran Trezona-le Comte
maintainer:          steve@sanityinc.com
copyright:           2015 Andy Newport, Steve Purcell, Kieran Trezona-le Comte
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable servant-elm-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , servant-elm
  default-language:    Haskell2010

test-suite servant-elm-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , servant-elm
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/purcell/servant-elm
